--- a/base/templates/base/task_list.html
+++ b/base/templates/base/task_list.html
@@ -1,4 +1,5 @@
 <h1> My To Do List</h1>
+<a href="{% url 'task-create' %}">Add Task</a>
 
 <table> 
     <tr> 
@@ -9,6 +10,8 @@
     <tr>
         <td>{{task.title}}</td>
         <td><a href="{% url 'task' task.id %}">View</a></td>
+        <td><a href="{% url 'task-update' task.id %}">Edit</a></td>
+        <td><a href="{% url 'task-delete' task.id %}">Delete</a></td>
     <tr>
     {% empty %}
         <h3> No Item in the list </h3>
