--- a/base/templates/base/task_list.html
+++ b/base/templates/base/task_list.html
@@ -9,6 +9,11 @@
 <h1> My To Do List</h1>
 <a href="{% url 'task-create' %}">Add Task</a>
 
+<form method="GET">
+    <input type='text' name='search-area' value='{{search_input}}'>
+    <input type='submit' value='Search'>
+</form>
+
 <table> 
     <tr> 
         <th>Item</th>
@@ -17,7 +22,6 @@
     {% for task in tasks %}
     <tr>
         <td>{{task.title}}</td>
-        <td><a href="{% url 'task' task.id %}">View</a></td>
         <td><a href="{% url 'task-update' task.id %}">Edit</a></td>
         <td><a href="{% url 'task-delete' task.id %}">Delete</a></td>
     <tr>
