--- a/base/templates/base/task_form.html
+++ b/base/templates/base/task_form.html
@@ -1,3 +1,6 @@
+{% extends 'base/main.html' %}
+{% block content %}
+
 <h3>Task form</h3>
 <a href="{% url 'tasks' %}">Go Back</a>
 <form method="Post" action="">
@@ -5,3 +8,5 @@
     {{form.as_p}}
     <input type="submit" value="submit">
 </form>
+
+{% endblock content %}
