--- a/base/templates/base/task_list.html
+++ b/base/templates/base/task_list.html
@@ -1,3 +1,6 @@
+{% extends 'base/main.html' %}
+{% block content %}
+
 {% if request.user.is_authenticated %}
 <p>{{request.user}}</p>
 <a href='{% url 'logout' %}'>Logout</a>
@@ -29,3 +32,5 @@
         <h3> No Item in the list </h3>
     {% endfor%}
 </table>
+
+{% endblock content %}
