--- a/base/templates/base/register.html
+++ b/base/templates/base/register.html
@@ -9,6 +9,6 @@
     <input type="submit" value="Register">
 </form>
 
-<p>Already have an account? <a href="{% url 'Login' %}">Login</a></p>
+<p>Already have an account? <a href="{% url 'login' %}">Login</a></p>
 
 {% endblock content %}
