--- a/base/templates/base/main.html
+++ b/base/templates/base/main.html
@@ -4,10 +4,122 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@1,700&display=swap" rel="stylesheet">
     <title>To Do Items</title>
     <style>
         body{
-            background-color: aqua;
+            background-color: #FAFAFA;
+            font-family: 'Crimson Text', serif;
+        }
+
+        h1,h2,h3,h4,h5,h6,{
+            font-family: 'Raleway', sans-serif;
+        }
+
+        a,p{
+            color: #4b5156;
+        }
+
+        .container{
+            max-width: 550px;
+            margin: auto;
+            margin-top: 30px;
+            background-color: #fff;
+            -webkit-box-shadow: 2px 2px 13px -4px rgba(0,0,0,0.21);
+            box-shadow: 2px 2px 13px -4px rgba(0,0,0,0.21);
+        }
+        
+        .header-bar{
+            display: flex;
+            justify-content: space-between;
+            color: #fff;
+            padding: 10px;
+            border-radius: 5px 5px 0 0;
+            background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,71,121,0.9809173669467787) 0%, rgba(0,212,255,1) 100%);
+        }
+
+        .header-bar a {
+            color: rgb(247,247,247);
+            text-decoration: none;
+        }
+
+        .task-wrapper{
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 20px;
+            background-color: #fff,
+            border-top: 1px solid rgb(226,226,226);
+        }
+
+        .task-title a {
+            text-decoration: none;
+            color: #4b5156;
+            margin-left: 25px;
+        }
+
+        .task-complete-icon {
+            height: 20px;
+            width: 20px;
+            background-color: rgb(105,192,105);
+            border-radius: 50%;
+        }
+
+        .task-incomplete-icon {
+            height: 20px;
+            width: 20px;
+            background-color: rgb(218,218,218);
+            border-radius: 50%;
+        }
+
+        .delete-link{
+            text-decoration: none;
+            font-weight: 900;
+            color: #cfc4949;
+            font-size: 22px;
+            line-height: 0;
+        }
+
+        #search-add-wrapper {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px;
+        }
+
+        #add-link {
+            color: #2596be;
+            text-decoration: none;
+            font-size: 42px;
+            text-shadow: 1px 1px #81413b;
+        }
+
+        input[type=text],input[type=password],textarea{
+            border: 1px solid #2596be;
+            border-radius: 5px;
+            padding: 10px;
+            width: 90%;
+        }
+        label{
+            padding-top: 10px !important;
+            display: block;
+        }
+
+        .button{
+            border: 1px solid #2596be;
+            background-color: #FAFAFA;
+            color: #2596be;
+            padding: 10px;
+            font-size: 14px;
+            border-radius: 5px;
+            cursor: pointer;
+            text-decoration: none;
+        }
+
+        .card-body{
+            padding: 20px;
         }
     </style>
   </head>
