--- a/base/templates/base/task_confirm_delete.html
+++ b/base/templates/base/task_confirm_delete.html
@@ -1,11 +1,16 @@
 {% extends 'base/main.html' %}
 {% block content %}
 
-<a href="{% url 'tasks' %}">Go Back</a>
-<form method="POST"> 
-    {% csrf_token %}
-    <p>Are you sure you want to delete this task? "{{task}}"</p>
-    <input type="submit" value="Delete"/>
-</form>
+<div class="header-bar">
+    <a href="{% url 'tasks' %}">&#8592; Back</a>
+</div>
+
+<div class="card-body">
+    <form method="POST"> 
+        {% csrf_token %}
+        <p>Are you sure you want to delete this task? "{{task.title}}"</p>
+        <input class="button" type="submit" value="Delete"/>
+    </form>
+</div>
 
 {% endblock content %}
