--- a/base/templates/base/task_list.html
+++ b/base/templates/base/task_list.html
@@ -1,36 +1,49 @@
 {% extends 'base/main.html' %}
 {% block content %}
 
-{% if request.user.is_authenticated %}
-<p>{{request.user}}</p>
-<a href='{% url 'logout' %}'>Logout</a>
-{% else %}
-<a href='{% url 'login' %}'>Login</a>
-{% endif %}
+<div class="header-bar">
+    <div>
+        <h1>Hello {{request.user|title}}</h1>
+        <h3 style="margin:0">You have <i>{{count}}</i> incomplete task{{count|pluralize:"s"}}</h3>
+    </div>
+    {% if request.user.is_authenticated %}
+    <a href='{% url 'logout' %}'>Logout</a>
+    {% else %}
+    <a href='{% url 'login' %}'>Login</a>
+    {% endif %}
+</div>
 
-<hr>
-<h1> My To Do List</h1>
-<a href="{% url 'task-create' %}">Add Task</a>
+<div id="search-add-wrapper">
+    <form method="GET" style="margin-top:20px;display:flex;">
+        <input type='text' name='search-area' value='{{search_input}}'>&nbsp;
+        <input class="button" type='submit' value='Search'>
+    </form>
+    <a id="add-link" href="{% url 'task-create' %}">&#x2b;</a>
+</div>
 
-<form method="GET">
-    <input type='text' name='search-area' value='{{search_input}}'>
-    <input type='submit' value='Search'>
-</form>
-
-<table> 
-    <tr> 
-        <th>Item</th>
-        <th></th>
-    </tr>
+<div class="tasks-items-wrapper">
     {% for task in tasks %}
-    <tr>
-        <td>{{task.title}}</td>
-        <td><a href="{% url 'task-update' task.id %}">Edit</a></td>
-        <td><a href="{% url 'task-delete' task.id %}">Delete</a></td>
-    <tr>
+    <div class="task-wrapper">
+        {% if task.complete %}
+        <div class="task-title">
+            <div class="task-complete-icon">
+            <i><s><a href="{% url 'task-update' task.id %}">{{task.title}}</a></s></i></div>
+        </div>
+        <a class="delete-link" href="{% url 'task-delete' task.id %}">&#215</a>
+        {% else %}
+        <div class="task-title">
+            <div class="task-incomplete-icon">
+            <a href="{% url 'task-update' task.id %}">{{task.title}}</a></div>
+        </div>
+        <a class="delete-link" href="{% url 'task-delete' task.id %}">&#215</a>
+        {% endif %}
+    </div>
+
     {% empty %}
-        <h3> No Item in the list </h3>
-    {% endfor%}
-</table>
+    <h3>No items in list</h3>
+    {% endfor %}
+</div>
+
+
 
 {% endblock content %}
