added favicon to web app

--- a/base/templates/base/main.html
+++ b/base/templates/base/main.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -7,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@1,700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="{% static 'to_do.png' %}" type="x-icon">
     <title>To Do Items</title>
     <style>
         body{
